--- a/src/mdx/__testfixtures__/story-def-text-only.mdx
+++ b/src/mdx/__testfixtures__/story-def-text-only.mdx
@@ -1,4 +1,4 @@
-import { Story, Meta } from 'cl-sb-docs/blocks';
+import { Story, Meta } from 'storyboard-altdocs/blocks';
 
 <Meta title="Text" />
 
