--- a/src/mdx/__testfixtures__/story-function-var.mdx
+++ b/src/mdx/__testfixtures__/story-function-var.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story } from 'cl-sb-docs/blocks';
+import { Meta, Story } from 'storyboard-altdocs/blocks';
 
 <Meta title="story-function-var" />
 
