--- a/src/mdx/__testfixtures__/component-id.mdx
+++ b/src/mdx/__testfixtures__/component-id.mdx
@@ -1,5 +1,5 @@
 import { Button } from '@storybook/react/demo';
-import { Story, Meta } from 'cl-sb-docs/blocks';
+import { Story, Meta } from 'storyboard-altdocs/blocks';
 
 <Meta title="Button" component={Button} id="button-id" />
 
