--- a/src/mdx/__testfixtures__/previews.mdx
+++ b/src/mdx/__testfixtures__/previews.mdx
@@ -1,5 +1,5 @@
 import { Button } from '@storybook/react/demo';
-import { Preview, Story, Meta } from 'cl-sb-docs/blocks';
+import { Preview, Story, Meta } from 'storyboard-altdocs/blocks';
 
 <Meta title="Button" component={Button} parameters={{ notes: 'component notes' }} />
 
