--- a/src/mdx/__testfixtures__/story-object.mdx
+++ b/src/mdx/__testfixtures__/story-object.mdx
@@ -1,4 +1,4 @@
-import { Story, Meta } from 'cl-sb-docs/blocks';
+import { Story, Meta } from 'storyboard-altdocs/blocks';
 import { Welcome, Button } from '@storybook/angular/demo';
 import { linkTo } from '@storybook/addon-links';
 
